fixed alignment of search bar whoogit add .

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,7 +78,7 @@ p {
   padding-left:15px;
 }
 .navbar-nav {
-  padding-top:20px;
+  padding-top:25px;
 }
 /*
 
@@ -214,7 +214,4 @@ ul.nav a:link, a:visited {
 .bean_heading{
   display:inline;
 }
-.form-control {
-  height:auto;
-  width: 100%;
-}
+
